# lowest_price_buyer

./: README.md  pyproject.toml
lowest_price_buyer/: __init__.py  cli.py  comparator.py  models.py  points.py
lowest_price_buyer/providers/: amazon.py  base.py  rakuten.py  yahoo.py  yodobashi.py
tests/: test_comparator.py  test_parsers.py  test_points.py
